fix: disable TitledPane animation, set course name label, fix add file button icon, and NPE safety in CourseView